# layer-rag-evaluation-v1

./: .env.example  .gitignore  README.md  client_inference.py  main.py  metric.py  pyproject.toml  rag_query.py  tmp.md
.github/workflows/: ci.yml  rag-eval.yml
app/: __init__.py
app/core/: config.py  paths.py
app/eval/: baseline.py  dataset_version.py  gold_dataset.py  llm_judge.py  metadata.py  run_eval.py  scoring.py  supabase_cli.py  supabase_client.py  supabase_store.py
app/http/: inference.py  rag.py
data_dev/gold_dataset/: easy_single_hop.jsonl  paraphrase.jsonl
data_dev/report/: rag_eval_report.json  rag_eval_summary.json
data_prod/gold_dataset/: easy_single_hop.jsonl
data_prod/report/: rag_eval_summary.json
dataset/: dataset-gold-test-1.0.0.json
docs/: eval.md  gold-dataset.md  supabase.md  version.md
rag_gold_eval/: generate_gold_dataset.py  run_eval.py
result/: dataset-gold-test-1.0.0.json
supabase/: schema.sql
tests/: test_config.py  test_dataset_version.py  test_llm_judge.py  test_metadata.py  test_run_eval.py  test_scoring.py  test_supabase_store.py
tests/fixtures/: baseline_summary.json  gold_single_row.jsonl
