[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "layer-rag-evaluation"
version = "1.0.0"
description = "Gold JSONL generation and RAG retrieval/answer evaluation"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = []
keywords = ["rag", "evaluation", "metrics", "gold-dataset"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "httpx>=0.20.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
where = ["."]
